# copa_de_la_vida

./: .gitignore  AGENTS.md  README.md  generate_quiniela.py  generate_randbetween.py  pyproject.toml  quiniela_mundial_2026.xlsx  quiniela_mundial_2026_randbetween.xlsx
src/: data.py  generate.py  styles.py
src/sheets/: bracket.py  clasificados.py  group_stage.py  references.py  third_place.py
